Haciendo el footer

--- a/index.html
+++ b/index.html
@@ -135,6 +135,42 @@
     </main>
 
     <footer>
+        <div class="logoFooter">
+            <img src="IMAGENES/Logo/LogoHumaya100x100.png" alt="Logo">
+        </div>
+
+        <div class="menu-vertical">
+            <h4>Menú 1</h4>
+            <ul>
+                <li>Botón 1</li>
+                <li>Botón 2</li>
+                <li>Botón 3</li>
+                <li>Botón 4</li>
+            </ul>
+        </div>
+
+        <div class="menu-vertical">
+            <h4>Menú 2</h4>
+            <ul>
+                <li>Botón 1</li>
+                <li>Botón 2</li>
+                <li>Botón 3</li>
+                <li>Botón 4</li>
+            </ul>
+        </div>
+
+        <div class="redes-sociales">
+            <h4>Redes Sociales</h4>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
+
+        <!--<div class="ubicacion">
+            <h4>Ubicación</h4>
+            <!-- Agrega aquí el iframe de Google Maps 
+            <iframe class="google-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3091.9284931935614!2d-122.41941658465682!3d37.77492997975368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809f4015219b%3A0x34b04804bb4311da!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1623152781577!5m2!1sen!2sus" allowfullscreen></iframe>
+        </div>-->
         
     </footer>
 
