Modificacion de archivos y tamaños nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
         <!--Contacto-->
         <section>
-            <div class="container-1 bg-dark">
+            <div class="container-1">
                 <h1>Texto en el Primer Container</h1>
                 <img src="IMAGENES/otras imagenes/loguitos2.png" alt="Imagen 1">
                 <p>Contactanos</p>
@@ -113,7 +113,7 @@
         
             <!-- Segundo Container -->
             <div class="container-2">
-                <img src="IMAGENES/Productos/Producto3.png" alt="Imagen 4">
+                <img class="imageProducto" src="IMAGENES/otras imagenes/afajores.jpeg" alt="Imagen 4">
                 <div class="contenedorForm">
                 <form action="#">
                     <h2>Dejanos tu consulta y nuestro personal se pondra en contacto a la brevedad:</h2>
@@ -134,7 +134,7 @@
         
     </main>
 
-    <footer>
+    <footer class="bg-dark">
         <div class="logoFooter">
             <img src="IMAGENES/Logo/LogoHumaya100x100.png" alt="Logo">
         </div>
