--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--Estilos de Bootstrap y propios-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 <body class="img-fluid">
     <header>
@@ -166,11 +167,11 @@
             <a href="#"><i class="fa fa-instagram"></i></a>
         </div>
 
-        <!--<div class="ubicacion">
+        <div class="ubicacion">
             <h4>Ubicación</h4>
-            <!-- Agrega aquí el iframe de Google Maps 
+            <!-- Agrega aquí el iframe de Google Maps--> 
             <iframe class="google-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3091.9284931935614!2d-122.41941658465682!3d37.77492997975368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809f4015219b%3A0x34b04804bb4311da!2sGolden%20Gate%20Bridge!5e0!3m2!1sen!2sus!4v1623152781577!5m2!1sen!2sus" allowfullscreen></iframe>
-        </div>-->
+        </div>
         
     </footer>
 
