--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
             </div>
             </div>
         </section>
+        <section>
+            <div id="recetas-container">
+                <!-- Aquí se cargarán las tarjetas de recetas -->
+            </div>
+        
+            <script src="recetas.js"></script>
+        </section>
         
     </main>
 
