Se agrego api de recetas

--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
             </div>
         </section>
         <section>
-            <div id="recetas-container">
+            <div class="tituloRecetas">
+            <h1>Nuestras Recetas</h1>
+            </div>
+            <div class="contenedorRecetas" id="recetas-container">
                 <!-- Aquí se cargarán las tarjetas de recetas -->
             </div>
-        
             <script src="recetas.js"></script>
         </section>
         
